[package]
name = "transaction-csv-processor"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "domain", "engine"]

[workspace.dependencies]
futures = "0.3.30"
tokio = "1.37.0"
async-stream = "0.3.5"
log = "0.4.21"
assertables = "7.0.1"
itertools = "0.12.1"
env_logger = "0.11.3"
csv-async = "1.3.0"

[dependencies]
domain = { path = "domain" }
engine = { path = "engine" }

assertables = { workspace = true }
itertools = { workspace = true }
csv-async = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }

csv = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
