[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true ,features = ["full"]}
domain = { path = "../domain" }
itertools = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio-util = { version = "0.7.11", features = ["io"] }
tokio-stream = "0.1.15"

[dev-dependencies]
tempfile = "3.10.1"
